@@ -1,7 +1,0 @@
-AUTOMAKE_OPTIONS	= foreign
-
-AM_CFLAGS			= -Wall -I$(top_srcdir)/src/sv_util -I$(top_srcdir)/src/sv_parser -I$(top_srcdir)/src/sv_interface -I$(top_srcdir)/src/sv_include -g
-
-noinst_PROGRAMS		= example testcomp
-example_LDADD      	= ../libsieve.la
-testcomp_LDADD      	= ../libsieve.la
